package seedu.sgsafe.utils.command;

public enum CommandType {
    LIST,
    ADD,
    EDIT,
    CLOSE,
    OPEN,
    DELETE,
    BYE,
    HELP,
    SETTING,
    READ
}
