package seedu.sgsafe.utils.command;

public enum SettingType {
    DATEINPUT,
    DATEOUTPUT
}
